fixed footer and link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,7 @@
       <div class="footer-wrapper">
         <ul>
           <li><h2>Projects</h2></li>
+          <li><a href="http://lexicrypt.com">Lexicrypt</a></li>
           <li><a href="http://greatbrain.heroku.com">The Great Brain</a></li>
           <li><a href="http://refrig.in">Refrig</a></li>
           <li><a href="http://thenonsequitur.org">The Non Sequitur</a></li>
