--- a/_includes/post_preview.html
+++ b/_includes/post_preview.html
@@ -10,7 +10,7 @@
   </div>
   <div class="post-content">
     <p class="date">{{ post.date | date:'%B %d, %Y' }}</p>
-    <p>{{ content }}</p>
+    <p>{{ content }} <a href="{{ site.baseurl }}{{ post.url }}" class="more">Read more</a></p>
     <div class="categories">
       {% for category in post.categories %}
         <span>{{ category }}</span>
