--- a/main.css
+++ b/main.css
@@ -114,6 +114,7 @@ h1, h2, h3, h4 {
     background-color: #dcfe80;
     color: #555;
     font-size: 1em;
+    padding: 0px 3px 0px 3px;
 }
 
 p {
@@ -174,11 +175,9 @@ a {
 
 .footer li a {
     color: #767676;
-    font-weight: normal;
-}
-
-.footer li a {
     font-size: 1em;
+    font-weight: normal;
+    padding: 0px 3px 0px 3px;
 }
 
 .footer li a:hover {
