--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,6 +19,7 @@
         </ul>
         <ul>
           <li><h2>Other</h2></li>
+          <li><a href="{{ site.baseurl }}/about.html">About</a></li>
           <li><a href="http://twitter.com/ednapiranha">Twitter</a></li>
           <li><a href="http://www.mixcloud.com/lazykiki">Podcasts</a></li>
         </ul>
