updated about page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,3 +10,4 @@
   <body>
     <div class="wrapper{% if page.is_index %} home{% endif %}">
       <a href="{{ site.baseurl }}/" id="home">Home</a>
+      <a href="{{ site.baseurl }}/about.html" id="about">About</a>
