--- a/_includes/post.html
+++ b/_includes/post.html
@@ -3,9 +3,7 @@
 <div class="content">
   <div class="page-header">
     {% if post.title %}
-      <h3 class="title">
-        {{ post.title}}
-      </h3>
+      <h3 class="title">{{ post.title}}</h3>
     {% endif %}
   </div>
   <div class="post-content">
