--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,6 +13,7 @@
         </ul>
         <ul>
           <li><h2>Code</h2></li>
+          <li><a href="https://github.com/ednapiranha/noodletalk">Noodle Talk</a></li>
           <li><a href="https://github.com/ednapiranha/web_imagery">Web Imagery</a></li>
           <li><a href="https://github.com/ednapiranha/auto-tagify">Auto Tagify</a></li>
           <li><a href="https://github.com/ednapiranha/tapechat">Tapechat</a></li>
