--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,6 +21,7 @@
         </ul>
         <ul>
           <li><h2>Other</h2></li>
+          <li><a href="http://776868973.com">776868973</a></li>
           <li><a href="http://pinboard.in/u:ednapiranha">Pinboard</a></li>
           <li><a href="http://twitter.com/ednapiranha">Twitter</a></li>
           <li><a href="http://www.mixcloud.com/lazykiki">Podcasts</a></li>
