--- a/main.css
+++ b/main.css
@@ -211,20 +211,7 @@ a {
     padding: 20px;
 }
 
-body.road {
-    background-color: #191919;
-    background-image: url('road.jpg');
-    background-repeat: no-repeat;
-    background-size: 100%;
-}
-
-body.road .wrapper {
-    position: absolute;
-    top: 20%;
-    width: 100%;
-}
-
-body.road .wrapper h1 {
-    color: #fff;
-    font-size: 200%;
+h2 {
+    font-size: 1.8em;
+    margin: 30px 0px 20px 0px;
 }
