--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,14 +4,13 @@
         <ul>
           <li><h2>Projects</h2></li>
           <li><a href="https://noodletalk.org">Noodle Talk</a></li>
-          <li><a href="http://lexicrypt.com">Lexicrypt</a></li>
           <li><a href="http://greatbrain.heroku.com">The Great Brain</a></li>
           <li><a href="http://thenonsequitur.org">The Non Sequitur</a></li>
-          <li><a href="http://collektr.com">Collektr</a></li>
           <li><a href="http://paperweb.me">Paperweb</a></li>
         </ul>
         <ul>
           <li><h2>Code</h2></li>
+          <li><a href="https://github.com/ednapiranha/noodlerpg">NoodleRPG</a></li>
           <li><a href="https://github.com/ednapiranha/specim.in">Specim.in</a></li>
           <li><a href="https://github.com/ednapiranha/herbie">Herbie</a></li>
           <li><a href="https://github.com/ednapiranha/noodletalk">Noodle Talk</a></li>
