new blog post; updated footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,8 @@
       <div class="footer-wrapper">
         <ul>
           <li><h2>Projects</h2></li>
-          <li><a href="https://noodletalk.org">Noodle Talk</a></li>
+          <li><a href="http://rpg.noodletalk.org">NoodleRPG</a></li>
+          <li><a href="http://noodletalk.org">Noodle Talk</a></li>
           <li><a href="http://greatbrain.heroku.com">The Great Brain</a></li>
           <li><a href="http://thenonsequitur.org">The Non Sequitur</a></li>
           <li><a href="http://paperweb.me">Paperweb</a></li>
@@ -27,16 +28,5 @@
         </ul>
       </div>
     </div>
-    <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-4319539-1']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-    </script>
   </body>
 </html>
