--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,17 @@
     <meta content="yes" name="apple-mobile-web-app-capable">
     <meta content="chrome=1" http-equiv="X-UA-Compatible">
     <link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/main.css">
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-4319539-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
   </head>
   <body>
     <div class="wrapper{% if page.is_index %} home{% endif %}">
