--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
       <div class="footer-wrapper">
         <ul>
           <li><h2>Projects</h2></li>
-          <li><a href="http://rpg.noodletalk.org">NoodleRPG</a></li>
+          <li><a href="http://noodleapp.net">NoodleApp (app.net client)</a></li>
           <li><a href="http://noodletalk.org">Noodle Talk</a></li>
           <li><a href="http://greatbrain.heroku.com">The Great Brain</a></li>
           <li><a href="http://thenonsequitur.org">The Non Sequitur</a></li>
@@ -21,7 +21,7 @@
         </ul>
         <ul>
           <li><h2>Other</h2></li>
-          <li><a href="http://776868973.com">776868973</a></li>
+          <li><a href="http://alpha.app.net">App.net</a></li>
           <li><a href="http://pinboard.in/u:ednapiranha">Pinboard</a></li>
           <li><a href="http://twitter.com/ednapiranha">Twitter</a></li>
           <li><a href="http://www.mixcloud.com/lazykiki">Podcasts</a></li>
