--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,10 +11,11 @@
         </ul>
         <ul>
           <li><h2>Code</h2></li>
-          <li><a href="https://github.com/ednapiranha/noodlerpg">NoodleRPG</a></li>
+          <li><a href="https://github.com/nooodle/noodlemix">NoodleMix</a></li>
+          <li><a href="https://github.com/nooodle/noodlerpg">NoodleRPG</a></li>
           <li><a href="https://github.com/ednapiranha/specim.in">Specim.in</a></li>
           <li><a href="https://github.com/ednapiranha/herbie">Herbie</a></li>
-          <li><a href="https://github.com/ednapiranha/noodletalk">Noodle Talk</a></li>
+          <li><a href="https://github.com/nooodle/noodletalk">Noodle Talk</a></li>
           <li><a href="https://github.com/ednapiranha/web_imagery">Web Imagery</a></li>
           <li><a href="https://github.com/ednapiranha/auto-tagify">Auto Tagify</a></li>
           <li><a href="https://github.com/ednapiranha/tapechat">Tapechat</a></li>
