--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,9 +22,9 @@
         </ul>
         <ul>
           <li><h2>Other</h2></li>
-          <li><a href="http://alpha.app.net">App.net</a></li>
+          <li><a href="http://alpha.app.net/ednapiranha">App.net</a></li>
           <li><a href="http://pinboard.in/u:ednapiranha">Pinboard</a></li>
-          <li><a href="http://twitter.com/ednapiranha">Twitter</a></li>
+          <li><a href="http://twitter.com/ednapiranha"><strike>Twitter</strike></a></li>
           <li><a href="http://www.mixcloud.com/lazykiki">Podcasts</a></li>
         </ul>
       </div>
